[package]
name = "tower-bpmn"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "BPMN runtime for custom backends built on Tower"
license = "MIT"
keywords = ["bpmn", "workflow", "axum", "tower", "orchestration"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/Christopher22/tower-bpmn"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
bytes = "1.10.1"
dashmap = "6.1.0"
futures = { version = "0.3", features = ["alloc", "executor"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
log = "0.4.29"
parking_lot = "0.12.5"
schemars = { version = "1.0.4", features = ["chrono04", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync", "net", "rt-multi-thread"] }
tower-service = "0.3.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dev-dependencies]
axum = "0.8.4"
