[package]
name = "tower-bpmn"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "BPMN runtime for custom backends built on Tower"
license = "MIT"
keywords = ["bpmn", "workflow", "axum", "tower", "orchestration"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/Christopher22/tower-bpmn"

[features]
default = []
postgres = ["dep:postgres", "dep:r2d2", "dep:r2d2_postgres"]
oidc = ["dep:jsonwebtoken"]

[dependencies]
base64 = "0.22.1"
jsonwebtoken = { version = "9", optional = true }
chrono = { version = "0.4.43", features = ["serde"] }
bytes = "1.10.1"
dashmap = "6.1.0"
futures = { version = "0.3", features = ["alloc", "executor"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
log = "0.4.29"
parking_lot = "0.12.5"
schemars = { version = "1.0.4", features = ["chrono04", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
r2d2 = { version = "0.8.10", optional = true }
r2d2_postgres = { version = "0.18.2", optional = true }
postgres = { version = "0.19.12", optional = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync", "net", "rt-multi-thread"] }
tower-service = "0.3.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dev-dependencies]
axum = "0.8.4"
axum-test = "20.0.0"